<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="3">
  <name>unitree_ros2_example</name>
  <version>0.0.0</version>
  <description>Uniree ros2 example</description>
  <maintainer email="unitree@unitree.com">Unitree</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
